parser_v9/y.output
Terminals which are not used

   AND
   OR


State 10 conflicts: 1 shift/reduce
State 36 conflicts: 10 shift/reduce
State 88 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 headers: headers headers

    3 @1: /* empty */

    4 headers: INCLUDE @1

    5 main: datatype ID

    6 datatype: INT
    7         | FLOAT
    8         | CHAR
    9         | VOID

   10 @2: /* empty */

   11 body: FOR @2 '(' statement ';' statement ';' statement ')' '{' body '}'

   12 @3: /* empty */

   13 body: IF @3 '(' condition ')' '{' body '}' else
   14     | statement ';'
   15     | body body

   16 @4: /* empty */

   17 body: PRINTFF @4 '(' STR ')' ';'

   18 @5: /* empty */

   19 body: SCANFF @5 '(' STR ',' '&' ID ')' ';'

   20 @6: /* empty */

   21 else: ELSE @6 '{' body '}'
   22     | /* empty */

   23 condition: value relop value
   24          | TRUE
   25          | FALSE
   26          | /* empty */

   27 @7: /* empty */

   28 statement: datatype ID @7 init

   29 @8: /* empty */

   30 statement: ID @8 '=' expression

   31 @9: /* empty */

   32 statement: ID @9 relop expression

   33 @10: /* empty */

   34 statement: ID @10 UNARY
   35          | UNARY ID

   36 init: '=' value
   37     | /* empty */

   38 expression: expression arithmetic expression
   39           | value

   40 arithmetic: ADD
   41           | SUBTRACT
   42           | MULTIPLY
   43           | DIVIDE

   44 relop: LT
   45      | GT
   46      | LE
   47      | GE
   48      | EQ
   49      | NE

   50 value: NUMBER
   51      | FLOAT_NUM
   52      | ID

   53 @11: /* empty */

   54 return: RETURN @11 value ';'
   55       | /* empty */


Terminals, with rules where they appear

$end (0) 0
'&' (38) 19
'(' (40) 1 11 13 17 19
')' (41) 1 11 13 17 19
',' (44) 19
';' (59) 11 14 17 19 54
'=' (61) 30 36
'{' (123) 1 11 13 21
'}' (125) 1 11 13 21
error (256)
VOID (258) 9
PRINTFF (259) 17
SCANFF (260) 19
INT (261) 6
FLOAT (262) 7
CHAR (263) 8
FOR (264) 11
IF (265) 13
ELSE (266) 21
TRUE (267) 24
FALSE (268) 25
NUMBER (269) 50
FLOAT_NUM (270) 51
ID (271) 5 19 28 30 32 34 35 52
LE (272) 46
GE (273) 47
EQ (274) 48
NE (275) 49
GT (276) 45
LT (277) 44
AND (278)
OR (279)
STR (280) 17 19
ADD (281) 40
MULTIPLY (282) 42
DIVIDE (283) 43
SUBTRACT (284) 41
UNARY (285) 34 35
INCLUDE (286) 4
RETURN (287) 54


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
headers (43)
    on left: 2 4, on right: 1 2
@1 (44)
    on left: 3, on right: 4
main (45)
    on left: 5, on right: 1
datatype (46)
    on left: 6 7 8 9, on right: 5 28
body (47)
    on left: 11 13 14 15 17 19, on right: 1 11 13 15 21
@2 (48)
    on left: 10, on right: 11
@3 (49)
    on left: 12, on right: 13
@4 (50)
    on left: 16, on right: 17
@5 (51)
    on left: 18, on right: 19
else (52)
    on left: 21 22, on right: 13
@6 (53)
    on left: 20, on right: 21
condition (54)
    on left: 23 24 25 26, on right: 13
statement (55)
    on left: 28 30 32 34 35, on right: 11 14
@7 (56)
    on left: 27, on right: 28
@8 (57)
    on left: 29, on right: 30
@9 (58)
    on left: 31, on right: 32
@10 (59)
    on left: 33, on right: 34
init (60)
    on left: 36 37, on right: 28
expression (61)
    on left: 38 39, on right: 30 32 38
arithmetic (62)
    on left: 40 41 42 43, on right: 38
relop (63)
    on left: 44 45 46 47 48 49, on right: 23 32
value (64)
    on left: 50 51 52, on right: 23 36 39 54
return (65)
    on left: 54 55, on right: 1
@11 (66)
    on left: 53, on right: 54


state 0

    0 $accept: . program $end

    INCLUDE  shift, and go to state 1

    program  go to state 2
    headers  go to state 3


state 1

    4 headers: INCLUDE . @1

    $default  reduce using rule 3 (@1)

    @1  go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: headers . main '(' ')' '{' body return '}'
    2 headers: headers . headers

    VOID     shift, and go to state 6
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    INCLUDE  shift, and go to state 1

    headers   go to state 10
    main      go to state 11
    datatype  go to state 12


state 4

    4 headers: INCLUDE @1 .

    $default  reduce using rule 4 (headers)


state 5

    0 $accept: program $end .

    $default  accept


state 6

    9 datatype: VOID .

    $default  reduce using rule 9 (datatype)


state 7

    6 datatype: INT .

    $default  reduce using rule 6 (datatype)


state 8

    7 datatype: FLOAT .

    $default  reduce using rule 7 (datatype)


state 9

    8 datatype: CHAR .

    $default  reduce using rule 8 (datatype)


state 10

    2 headers: headers . headers
    2        | headers headers .

    INCLUDE  shift, and go to state 1

    INCLUDE   [reduce using rule 2 (headers)]
    $default  reduce using rule 2 (headers)

    headers  go to state 10


state 11

    1 program: headers main . '(' ')' '{' body return '}'

    '('  shift, and go to state 13


state 12

    5 main: datatype . ID

    ID  shift, and go to state 14


state 13

    1 program: headers main '(' . ')' '{' body return '}'

    ')'  shift, and go to state 15


state 14

    5 main: datatype ID .

    $default  reduce using rule 5 (main)


state 15

    1 program: headers main '(' ')' . '{' body return '}'

    '{'  shift, and go to state 16


state 16

    1 program: headers main '(' ')' '{' . body return '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 24
    statement  go to state 25


state 17

   17 body: PRINTFF . @4 '(' STR ')' ';'

    $default  reduce using rule 16 (@4)

    @4  go to state 26


state 18

   19 body: SCANFF . @5 '(' STR ',' '&' ID ')' ';'

    $default  reduce using rule 18 (@5)

    @5  go to state 27


state 19

   11 body: FOR . @2 '(' statement ';' statement ';' statement ')' '{' body '}'

    $default  reduce using rule 10 (@2)

    @2  go to state 28


state 20

   13 body: IF . @3 '(' condition ')' '{' body '}' else

    $default  reduce using rule 12 (@3)

    @3  go to state 29


state 21

   30 statement: ID . @8 '=' expression
   32          | ID . @9 relop expression
   34          | ID . @10 UNARY

    UNARY     reduce using rule 33 (@10)
    '='       reduce using rule 29 (@8)
    $default  reduce using rule 31 (@9)

    @8   go to state 30
    @9   go to state 31
    @10  go to state 32


state 22

   35 statement: UNARY . ID

    ID  shift, and go to state 33


state 23

   28 statement: datatype . ID @7 init

    ID  shift, and go to state 34


state 24

    1 program: headers main '(' ')' '{' body . return '}'
   15 body: body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    RETURN   shift, and go to state 35

    $default  reduce using rule 55 (return)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25
    return     go to state 37


state 25

   14 body: statement . ';'

    ';'  shift, and go to state 38


state 26

   17 body: PRINTFF @4 . '(' STR ')' ';'

    '('  shift, and go to state 39


state 27

   19 body: SCANFF @5 . '(' STR ',' '&' ID ')' ';'

    '('  shift, and go to state 40


state 28

   11 body: FOR @2 . '(' statement ';' statement ';' statement ')' '{' body '}'

    '('  shift, and go to state 41


state 29

   13 body: IF @3 . '(' condition ')' '{' body '}' else

    '('  shift, and go to state 42


state 30

   30 statement: ID @8 . '=' expression

    '='  shift, and go to state 43


state 31

   32 statement: ID @9 . relop expression

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 50


state 32

   34 statement: ID @10 . UNARY

    UNARY  shift, and go to state 51


state 33

   35 statement: UNARY ID .

    $default  reduce using rule 35 (statement)


state 34

   28 statement: datatype ID . @7 init

    $default  reduce using rule 27 (@7)

    @7  go to state 52


state 35

   54 return: RETURN . @11 value ';'

    $default  reduce using rule 53 (@11)

    @11  go to state 53


state 36

   15 body: body . body
   15     | body body .

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    VOID      [reduce using rule 15 (body)]
    PRINTFF   [reduce using rule 15 (body)]
    SCANFF    [reduce using rule 15 (body)]
    INT       [reduce using rule 15 (body)]
    FLOAT     [reduce using rule 15 (body)]
    CHAR      [reduce using rule 15 (body)]
    FOR       [reduce using rule 15 (body)]
    IF        [reduce using rule 15 (body)]
    ID        [reduce using rule 15 (body)]
    UNARY     [reduce using rule 15 (body)]
    $default  reduce using rule 15 (body)

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


state 37

    1 program: headers main '(' ')' '{' body return . '}'

    '}'  shift, and go to state 54


state 38

   14 body: statement ';' .

    $default  reduce using rule 14 (body)


state 39

   17 body: PRINTFF @4 '(' . STR ')' ';'

    STR  shift, and go to state 55


state 40

   19 body: SCANFF @5 '(' . STR ',' '&' ID ')' ';'

    STR  shift, and go to state 56


state 41

   11 body: FOR @2 '(' . statement ';' statement ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 57


state 42

   13 body: IF @3 '(' . condition ')' '{' body '}' else

    TRUE       shift, and go to state 58
    FALSE      shift, and go to state 59
    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    $default  reduce using rule 26 (condition)

    condition  go to state 63
    value      go to state 64


state 43

   30 statement: ID @8 '=' . expression

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    expression  go to state 65
    value       go to state 66


state 44

   46 relop: LE .

    $default  reduce using rule 46 (relop)


state 45

   47 relop: GE .

    $default  reduce using rule 47 (relop)


state 46

   48 relop: EQ .

    $default  reduce using rule 48 (relop)


state 47

   49 relop: NE .

    $default  reduce using rule 49 (relop)


state 48

   45 relop: GT .

    $default  reduce using rule 45 (relop)


state 49

   44 relop: LT .

    $default  reduce using rule 44 (relop)


state 50

   32 statement: ID @9 relop . expression

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    expression  go to state 67
    value       go to state 66


state 51

   34 statement: ID @10 UNARY .

    $default  reduce using rule 34 (statement)


state 52

   28 statement: datatype ID @7 . init

    '='  shift, and go to state 68

    $default  reduce using rule 37 (init)

    init  go to state 69


state 53

   54 return: RETURN @11 . value ';'

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    value  go to state 70


state 54

    1 program: headers main '(' ')' '{' body return '}' .

    $default  reduce using rule 1 (program)


state 55

   17 body: PRINTFF @4 '(' STR . ')' ';'

    ')'  shift, and go to state 71


state 56

   19 body: SCANFF @5 '(' STR . ',' '&' ID ')' ';'

    ','  shift, and go to state 72


state 57

   11 body: FOR @2 '(' statement . ';' statement ';' statement ')' '{' body '}'

    ';'  shift, and go to state 73


state 58

   24 condition: TRUE .

    $default  reduce using rule 24 (condition)


state 59

   25 condition: FALSE .

    $default  reduce using rule 25 (condition)


state 60

   50 value: NUMBER .

    $default  reduce using rule 50 (value)


state 61

   51 value: FLOAT_NUM .

    $default  reduce using rule 51 (value)


state 62

   52 value: ID .

    $default  reduce using rule 52 (value)


state 63

   13 body: IF @3 '(' condition . ')' '{' body '}' else

    ')'  shift, and go to state 74


state 64

   23 condition: value . relop value

    LE  shift, and go to state 44
    GE  shift, and go to state 45
    EQ  shift, and go to state 46
    NE  shift, and go to state 47
    GT  shift, and go to state 48
    LT  shift, and go to state 49

    relop  go to state 75


state 65

   30 statement: ID @8 '=' expression .
   38 expression: expression . arithmetic expression

    ADD       shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    SUBTRACT  shift, and go to state 79

    $default  reduce using rule 30 (statement)

    arithmetic  go to state 80


state 66

   39 expression: value .

    $default  reduce using rule 39 (expression)


state 67

   32 statement: ID @9 relop expression .
   38 expression: expression . arithmetic expression

    ADD       shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    SUBTRACT  shift, and go to state 79

    $default  reduce using rule 32 (statement)

    arithmetic  go to state 80


state 68

   36 init: '=' . value

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    value  go to state 81


state 69

   28 statement: datatype ID @7 init .

    $default  reduce using rule 28 (statement)


state 70

   54 return: RETURN @11 value . ';'

    ';'  shift, and go to state 82


state 71

   17 body: PRINTFF @4 '(' STR ')' . ';'

    ';'  shift, and go to state 83


state 72

   19 body: SCANFF @5 '(' STR ',' . '&' ID ')' ';'

    '&'  shift, and go to state 84


state 73

   11 body: FOR @2 '(' statement ';' . statement ';' statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 85


state 74

   13 body: IF @3 '(' condition ')' . '{' body '}' else

    '{'  shift, and go to state 86


state 75

   23 condition: value relop . value

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    value  go to state 87


state 76

   40 arithmetic: ADD .

    $default  reduce using rule 40 (arithmetic)


state 77

   42 arithmetic: MULTIPLY .

    $default  reduce using rule 42 (arithmetic)


state 78

   43 arithmetic: DIVIDE .

    $default  reduce using rule 43 (arithmetic)


state 79

   41 arithmetic: SUBTRACT .

    $default  reduce using rule 41 (arithmetic)


state 80

   38 expression: expression arithmetic . expression

    NUMBER     shift, and go to state 60
    FLOAT_NUM  shift, and go to state 61
    ID         shift, and go to state 62

    expression  go to state 88
    value       go to state 66


state 81

   36 init: '=' value .

    $default  reduce using rule 36 (init)


state 82

   54 return: RETURN @11 value ';' .

    $default  reduce using rule 54 (return)


state 83

   17 body: PRINTFF @4 '(' STR ')' ';' .

    $default  reduce using rule 17 (body)


state 84

   19 body: SCANFF @5 '(' STR ',' '&' . ID ')' ';'

    ID  shift, and go to state 89


state 85

   11 body: FOR @2 '(' statement ';' statement . ';' statement ')' '{' body '}'

    ';'  shift, and go to state 90


state 86

   13 body: IF @3 '(' condition ')' '{' . body '}' else

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 91
    statement  go to state 25


state 87

   23 condition: value relop value .

    $default  reduce using rule 23 (condition)


state 88

   38 expression: expression . arithmetic expression
   38           | expression arithmetic expression .

    ADD       shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    SUBTRACT  shift, and go to state 79

    ADD       [reduce using rule 38 (expression)]
    MULTIPLY  [reduce using rule 38 (expression)]
    DIVIDE    [reduce using rule 38 (expression)]
    SUBTRACT  [reduce using rule 38 (expression)]
    $default  reduce using rule 38 (expression)

    arithmetic  go to state 80


state 89

   19 body: SCANFF @5 '(' STR ',' '&' ID . ')' ';'

    ')'  shift, and go to state 92


state 90

   11 body: FOR @2 '(' statement ';' statement ';' . statement ')' '{' body '}'

    VOID   shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8
    CHAR   shift, and go to state 9
    ID     shift, and go to state 21
    UNARY  shift, and go to state 22

    datatype   go to state 23
    statement  go to state 93


state 91

   13 body: IF @3 '(' condition ')' '{' body . '}' else
   15     | body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 94

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


state 92

   19 body: SCANFF @5 '(' STR ',' '&' ID ')' . ';'

    ';'  shift, and go to state 95


state 93

   11 body: FOR @2 '(' statement ';' statement ';' statement . ')' '{' body '}'

    ')'  shift, and go to state 96


state 94

   13 body: IF @3 '(' condition ')' '{' body '}' . else

    ELSE  shift, and go to state 97

    $default  reduce using rule 22 (else)

    else  go to state 98


state 95

   19 body: SCANFF @5 '(' STR ',' '&' ID ')' ';' .

    $default  reduce using rule 19 (body)


state 96

   11 body: FOR @2 '(' statement ';' statement ';' statement ')' . '{' body '}'

    '{'  shift, and go to state 99


state 97

   21 else: ELSE . @6 '{' body '}'

    $default  reduce using rule 20 (@6)

    @6  go to state 100


state 98

   13 body: IF @3 '(' condition ')' '{' body '}' else .

    $default  reduce using rule 13 (body)


state 99

   11 body: FOR @2 '(' statement ';' statement ';' statement ')' '{' . body '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 101
    statement  go to state 25


state 100

   21 else: ELSE @6 . '{' body '}'

    '{'  shift, and go to state 102


state 101

   11 body: FOR @2 '(' statement ';' statement ';' statement ')' '{' body . '}'
   15     | body . body

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 103

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


state 102

   21 else: ELSE @6 '{' . body '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22

    datatype   go to state 23
    body       go to state 104
    statement  go to state 25


state 103

   11 body: FOR @2 '(' statement ';' statement ';' statement ')' '{' body '}' .

    $default  reduce using rule 11 (body)


state 104

   15 body: body . body
   21 else: ELSE @6 '{' body . '}'

    VOID     shift, and go to state 6
    PRINTFF  shift, and go to state 17
    SCANFF   shift, and go to state 18
    INT      shift, and go to state 7
    FLOAT    shift, and go to state 8
    CHAR     shift, and go to state 9
    FOR      shift, and go to state 19
    IF       shift, and go to state 20
    ID       shift, and go to state 21
    UNARY    shift, and go to state 22
    '}'      shift, and go to state 105

    datatype   go to state 23
    body       go to state 36
    statement  go to state 25


state 105

   21 else: ELSE @6 '{' body '}' .

    $default  reduce using rule 21 (else)
